<resources>
    <string name="app_name">Bmi_2</string>
    <string name="title_home">Home</string>
    <string name="title_calculator">Bmi Kalkulator</string>
    <string name="title_mifflin">Mifflin</string>
    <string name="welcome_text">Witaj w kalkulatorze BMI/Mifflina</string>
    <string name="weight_desc">Podaj masę (KG): </string>
    <string name="height_desc">Podja wzrost (M): </string>
    <string name="bmi">BMI: </string>
    <string name="compartment">Przedział: </string>
    <string name="male">Mężczyzna</string>
    <string name="female">Kobieta</string>
    <string name="age_desc">Podaj wiek (w latach): </string>
    <string name="ppm">PPM: </string>
    <string name="compartment_v_over_weight">Otyłość</string>
    <string name="compartment_over_weight">Nadwaga</string>
    <string name="compartment_normal_weight">Wartość prawidłowa</string>
    <string name="compartment_under_weight">Niedowaga</string>
    <string name="fill_alld_data">Uzupałnij wszystkie dane</string>
    <string name="start_quiz">Zacznij quiz</string>
    <string name="title_activity_question">Question</string>
    <string name="questionTItle_begining">Pytanie numer: </string>
    <string name="questionTItle_from"> z </string>
    <string name="quizEnd">Podsumowanie</string>
    <string name="correctAnswers">Odpowiedzi poprawnych:</string>
    <string name="wrongAnswers">Odpowiedzi negatywnych:</string>
    <string name="sum">Uzyskany wynik:</string>
    <string name="returnToMain">Powróć do głównego ekrany</string>
    <string name="showChart">Zobacz postęp na wykresie</string>
</resources>
