<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/welcomeScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome_text"
                android:textSize="24sp" />

            <Button
                android:id="@+id/startQuizBtn"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_margin="15dp"
                android:text="@string/start_quiz" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bmiCalculatorScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <android.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/appDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_calculator" />

            <TextView
                android:id="@+id/weightDescTextvire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/weight_desc" />

            <EditText
                android:id="@+id/weightEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/heightDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/height_desc" />

            <EditText
                android:id="@+id/heightEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/bmiOutputTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:text="@string/bmi"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/compartmenOutTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:text="@string/compartment"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/mealImageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_row="5"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="top"
                android:visibility="invisible"
                app:srcCompat="@drawable/zdrowe" />

        </android.widget.GridLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mifflinScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/menDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="24sp"
                app:layout_column="0"
                app:layout_row="0" />

            <Switch
                android:id="@+id/sexSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_column="1"
                app:layout_row="0" />

            <TextView
                android:id="@+id/femaleDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/female"
                android:textSize="24sp"
                app:layout_column="2"
                app:layout_row="0" />

            <TextView
                android:id="@+id/ageDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_desc"
                android:textSize="18sp"
                app:layout_column="0"
                app:layout_row="1" />

            <EditText
                android:id="@+id/ageEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                app:layout_column="1"
                app:layout_columnSpan="2"
                app:layout_row="1" />

            <TextView
                android:id="@+id/mifflinOutTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ppm"
                android:textSize="24sp"
                app:layout_column="0"
                app:layout_columnSpan="3"
                app:layout_row="2" />

        </android.support.v7.widget.GridLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</android.support.constraint.ConstraintLayout>